<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.alex.hellogoodbyead.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@drawable/bluebackground">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exclaim_btn"
        android:id="@+id/button"
        android:background="@drawable/exclamationbtn"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/bright_blue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hello"
        android:id="@+id/textView"
        android:textColor="@color/dusty_rose"
        android:textSize="40sp"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poke_btn"
        android:id="@+id/button2"
        android:background="@drawable/exclamationbtn"
        android:textColor="@color/bright_blue"
        android:layout_alignTop="@+id/textView2"
        android:layout_toStartOf="@+id/imageView"
        android:textStyle="bold"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/poked"
        android:id="@+id/textView2"
        android:textColor="@color/orange"
        android:textSize="40sp"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/imageView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/fish"
        android:contentDescription="@string/exclaim_img"
        android:layout_marginTop="56dp"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="Davd Marcella"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        app:layout_anchor="@+id/include"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="81dp" />
</RelativeLayout>
